--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -167,37 +167,8 @@
 
 \titlepage
 
-\chapter*{Abstract}
-In an effort to reduce the sheer complexity associated with the many degrees of freedom encountered in Condensed Matter, it is beneficial to separate the full system under investigation into smaller subsystems.
-This separation is most often performed based on energy and time scales, allowing one to focus on the subsystem with the energy scale of interest.
-The influence of the decoupled subsystems can then be approximated by either treating them as a smeared out average, leading to mean-field approximations, or as constant background potentials, resulting in adiabatic approximations. This procedure relies on the weak interaction, or coupling, between the subsystems.
-For example, in the case of the electron-phonon interaction, the influence of the electrons on the phonons, describing the displacements of the ions, can be approximated as an average charge field, with the fluctuations cancelling out on the time scales involved with the phonon dynamics.
-The electrons, on the other hand, experience the ionic potential as a constant background, remaining at the instantaneous ground-state with respect to it. This is, of course, the well-known Born-Oppenheimer or adiabatic approximation.
-When the interaction between the subsystems is non-negligible, however, these approximations can fail spectacularly.
-A prime example is superconductivity, where the electron-phonon coupling forms the linchpin for the exotic physics that is observed in these materials.
-
-In this Thesis we set out to understand puzzling experimental results in systems of recent interest, where the novel behavior results from the strong interactions between ferroic orders.
-Aiding in this effort are the diverse analytical and numerical tools we utilize in combination with the simplified models that we formulate in order to rationalize the observations. 
-
-In Chapter~\ref{ch:Rashba} we commence by investigating the underlying mechanisms that lead to the large Rashba-like spin-splitting in the electronic band structure of ferroelectric semiconductors with large atomic SOC.
-We discuss that, contrary to what is generally accepted, it is not the purely relativistic Rashba-Bychkov effect that lies at the core of this spin-splitting, but rather electrostatic effects where orbitals that have nonzero orbital angular momentum are shown to result in Bloch functions that harbor dipoles. These dipoles couple to the ferroelectric polarization, making the resultant spin-splitting tunable by external electric fields.
-
-This is followed in Chapter~\ref{ch:GdMn2O5} by a study on the very peculiar magnetoelectric switching that is observed in multiferroic GdMn$_2$O$_5$.
-Depending on the angle between the crystalline $a$ axis and an externally applied magnetic field, we uncover three distinct switching regimes for the ferroelectric polarization, one of which demonstrates a novel four-state hysteresis loop.
-We reproduce the behavior within a phenomenological model, and find that half the spins rotate a full 360$^\circ$ in 90$^\circ$ increments.
-Furthermore, we show that the trajectory of the order parameters in the four-state regime is topologically distinct from those of the two-state regimes. To the best of our knowledge this effect exemplifies the first manifestation of topology in the context of ferroic switching.
-
-In Chapter~\ref{ch:CrSDW} the focus is shifted towards the aspect of dynamical control with increased granularity, that can be achieved in systems with strongly coupled orders.
-We show that, in a thin film of elemental Chromium, an extremely precise control over a lattice vibration can be achieved through the excitations of a coupled spin density wave.
-By applying a carefully chosen set of optical pulses, this allows us to indirectly modulate the amplitude of the lattice vibration, increasing or destroying it in the process.
-We formulate and fit a Landau model based on the experimental measurements with two pulses, and speculate on the extended possibilities than could be achieved with a larger set of pulses. 
-
-Finally, we conclude this Thesis in Chapter~\ref{ch:Softening} by a systematic study of the implications on the mechanical properties of 180$^\circ$ ferroelectric domain walls in BaTiO$_3$, due to the interaction between strain and the polarization.
-Surprisingly, these walls appear mechanically softer to a tip applied to the surface of the sample, even though they are not ferroelastic and thus do not separate domains with different strain textures.
-Based on the experimental observations and a numerical simulation, we uncover that the mechanical interaction between the tip and domain wall localized phonons explains the apparent softening.
-
 \chapter*{Acknowledgements}
-First and foremost I would like to thank my supervisor Dr. Sergey Artyukhin for the wonderful opportunities I was offered during my Ph.D. The freedom and encouragement that he gave me to pursue my many interests have allowed me to develop my knowledge and skills in many areas of Condensed Matter Physics, while providing me with all the answers to the many questions I had, with most illuminating, engaging, and fruitful discussions, and with overall incredible guidance and support.  I would, furthermore, like to thank Prof. David Vanderbilt and Prof. Stefan Bl\"ugel for allowing me to visit their group, which broadened my scientific horizon and led to many engaging experiences. I also wish to thank Prof. Maxim Mostovoy, Prof. Sang-Wook Cheong, Prof. Andrei Pimenov, Prof. Andrei Singer, and Prof. Gustau Catalan for their insights and wonderful collaborations. Reflecting on the academic steps that ultimately brought me to this point, I can not help but feel a deep gratitude towards Meneer Koen Geeraert for providing the initial matchstick that ignited my passion for physics.
+First and foremost I would like to thank my supervisor Dr. Sergey Artyukhin for the wonderful opportunities I was offered during my Ph.D. The freedom and encouragement that he gave me to pursue my many interests have allowed me to develop my knowledge and skills in many areas of Condensed Matter Physics, while providing me with all the answers to the many questions I had, with most illuminating, engaging, and fruitful discussions, and with overall incredible guidance and support.  I would, furthermore, like to thank Prof. David Vanderbilt and Prof. Stefan Bl\"ugel for allowing me to visit their group, which broadened my scientific horizon and led to many engaging experiences. I also wish to thank Prof. Maxim Mostovoy, Prof. Sang-Wook Cheong, Prof. Andrei Pimenov, Prof. Andrei Singer, and Prof. Gustavo Catal\'an for their insights and wonderful collaborations. I would also like to thank Prof. Giuseppe La Rocca for his swift and helpful comments. Reflecting on the academic steps that ultimately brought me to this point, I can not help but feel a deep gratitude towards Meneer Koen Geeraert for providing the initial matchstick that ignited my passion for physics.
 
 I wish to thank the many friends I got to know along this journey for providing me with an ever kind and pleasant environment. I will never forget the many discussions on numerical codes and techniques I had with Peng, some more heated than others, all of them rewarding. Giulia and Francesco were never faltering presences of kindness and joy in our office, either through music, or origami dinosaurs. In the later years, I got to share in the wisdom of Gabriele and the humor of Michele, dark and cynical, or otherwise. The first year I spent at Scuola Normale, I'll never forget. The true close-knit group of friends I found there led me to experience truly spectacularly fun moments. I will always cherish the never-ending battle fought with Paolo, Gianmichele, and Pietro on the billiardino, the calm composure of Bibek, and deep conversations with Marcello and Donato, all topped off by a bit of benzina during our nightly endeavors.
 I would also like to take this moment to truly thank my friends back home for remaining an ever-reliable source of fun, happiness, and support. Florian in particular has seen all the ups and downs I went through on this, sometimes tumultuous, journey, providing me with never-ending camaraderie, deep conversations, cat videos of every variety, beverages of every color, and consolation in more trying times.
@@ -205,21 +176,21 @@ I would also like to take this moment to truly thank my friends back home for re
 I thank my sister Marie for always being a listening ear, and my brother Philippe for sharing with me his passion for all things computers and games, and both of them for always believing in me.
 
 This brings me, finally, to my Mother and Father, whom I can not thank enough for the many opportunities, endless support, unconditional love, perpetual encouragement, and cautious patience they have given me. I truly could not have wished for more fantastic parents. 
-% \Include{Publications}
-% \setcounter{tocdepth}{1}
-% \tableofcontents
-% \mainmatter
-% \Include{Introduction}
+\Include{Publications}
+\setcounter{tocdepth}{1}
+\tableofcontents
+\mainmatter
+\Include{Introduction}
 
-% \Include{Rashba}
-% \Include{GdMn2O5}
-% \Include{Cr}
+\Include{Rashba}
+\Include{GdMn2O5}
+\Include{Cr}
 
-% \Include{Softening}
-% \appendix
-% \Include{DFT}
-% \Include{Wannier}
-% \Include{FEM}
+\Include{Softening}
+\appendix
+\Include{DFT}
+\Include{Wannier}
+\Include{FEM}
 \Include{codes}
 \backmatter
 \bibliography{references}
